--- a/action.yaml
+++ b/action.yaml
@@ -2,11 +2,11 @@ name: 'get-latest-release-tag'
 author: 'dragonish'
 description: 'Get the latest release tag of the specified repository'
 inputs:
-  repository:
-    description: 'The owner and name of the repository. Format: {owner}/{repo}'
-    required: false
   token:
     description: 'Token with specified repository read permission'
+    required: true
+  repository:
+    description: 'The owner and name of the repository. Format: {owner}/{repo}'
     required: false
 outputs:
   tag:
