adjust(action): change action name
The original name conflicts with an existing action on GitHub Marketplace.

--- a/action.yaml
+++ b/action.yaml
@@ -1,4 +1,4 @@
-name: 'get-latest-release-tag'
+name: 'Get Repository Latest Release Tag'
 author: 'dragonish'
 description: 'Get the latest release tag of the specified repository'
 inputs:
