feat(main): allows to get the pre-release tag
Add new input `pre-release`.

--- a/action.yaml
+++ b/action.yaml
@@ -8,6 +8,9 @@ inputs:
   repository:
     description: 'The owner and name of the repository. Format: {owner}/{repo}'
     required: false
+  pre-release:
+    description: 'Allow the latest tag that may be pre-release'
+    required: false
 outputs:
   tag:
     description: 'The latest release tag'
